--- a/_config.yaml
+++ b/_config.yaml
@@ -3,3 +3,14 @@ description: Bookmark this to keep an eye on my project updates!
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
         - jekyll-remote-theme 
+lsi: false
+safe: true
+source: [your repo's top level directory]
+incremental: false
+highlighter: rouge
+gist:
+        noscript: false
+kramdown:
+        math_engine: mathjax
+        syntax_highlighter: rouge
+
