--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -21,9 +21,7 @@
 title: My awesome website!
 email: bayleyking13@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  A simple portfolio! I'm sure it will be completed....
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  king2b3
