--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 title: blank # the website title (if blank, full name will be used instead)
 first_name: Bayley
 last_name: King
-email: bking2@udayton.com 
+email: bking2@udayton.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   Welcome to my personal webpage! I'm still figuring out what I want to include on here... Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
@@ -17,7 +17,7 @@ lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: curry_rice.png  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://king2b3.github.io # the base hostname & protocol for your site
-baseurl: /king2b3.github.io # the subpath of your site, e.g. /blog/
+baseurl: # the subpath of your site, e.g. /blog/
 last_updated: true # set to true if you want to display last updated in the footer
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 
